added button hover
added hover function that will change the color of the buttton when hover

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 
       }
 
+      .download:hover
+      {
+         background:rgb(66, 144, 245);
+      }
       .download:active
       {
         
